--- a/isis/src/base/apps/findimageoverlaps/tsts/default/Makefile
+++ b/isis/src/base/apps/findimageoverlaps/tsts/default/Makefile
@@ -5,4 +5,5 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(LS) $(INPUT)/*.cub > $(OUTPUT)/cubes.lis;
 	$(APPNAME) FROM=$(OUTPUT)/cubes.lis TO=$(OUTPUT)/overlaps.txt > /dev/null;
+	rsync -rltp $(OUTPUT) output_copy > /dev/null;
 	$(RM) $(OUTPUT)/cubes.lis;
