--- a/isis/src/control/apps/cnetsplit/tsts/splitCnet/Makefile
+++ b/isis/src/control/apps/cnetsplit/tsts/splitCnet/Makefile
@@ -1,7 +1,5 @@
 APPNAME = cnetsplit
 
-truth.pvl.IGNORELINES = UserName Created LastModified DateTime
-
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
@@ -13,7 +11,5 @@ commands:
 	  from2=$(OUTPUT)/outsplit02.net \
 	  id=autoseed \
 	  description=cnetsplit \
-	  to=$(OUTPUT)/truth.bin > /dev/null;
-	  cnetbin2pvl from=$(OUTPUT)/truth.bin \
-	  to=$(OUTPUT)/truth.pvl > /dev/null;
-	  $(RM) $(OUTPUT)/outsplit* $(OUTPUT)/truth.bin;
+	  to=$(OUTPUT)/truth.net > /dev/null;
+	  $(RM) $(OUTPUT)/outsplit*;
